--- a/minting-dapp/src/styles/components/general.scss
+++ b/minting-dapp/src/styles/components/general.scss
@@ -8,7 +8,7 @@ body {
  // @apply bg-gradient-to-b from-page-from_bg via-page-from_bg to-page-to_bg;
 
   // Fullscreen background image example
-  background-image: url('https://i.postimg.cc/MZBzDCWY/web.png');
+  background-image: url('https://i.postimg.cc/kG9RGBT0/onehund.gif');
   @apply bg-center bg-cover bg-fixed;
 }
 
